<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/nombre_de_usuario"
        />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_name"
        android:minHeight="48dp"
        android:padding="12dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/Email"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
